--- a/booking-service/.env
+++ b/booking-service/.env
@@ -1,8 +1,7 @@
-APP_PORT=8081
-REDIS_URL=localhost:6379
+APP_PORT=4041
+EVENT_SERVICE_URL=http://localhost:8081
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=myuser
 DATABASE_PASSWORD=mypassword
 DATABASE_NAME=mydb
-
