--- a/booking-service/.env
+++ b/booking-service/.env
@@ -1,5 +1,6 @@
 APP_PORT=4041
 EVENT_SERVICE_URL=http://localhost:8081
+USER_SERVICE_URL=http://localhost:3031
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=myuser
