--- a/event-service/.env
+++ b/event-service/.env
@@ -1,5 +1,6 @@
 APP_PORT=8081
 REDIS_URL=localhost:6379
+USER_SERVICE_URL=http://localhost:3031
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=myuser
